--- a/src/component/main/main.css
+++ b/src/component/main/main.css
@@ -1,9 +1,42 @@
-.MainComponent-top {
-  border: solid 1px;
+.MainComponent {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
+
+.MainComponent-header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  min-height: 70px;
+  background-color: white;
+}
+
+.MainComponent-header-avatar {
+  text-align: right;
+}
+
+.MainComponent-header-avatar img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #337ab7;
 }
 
 .MainComponent-bottom {
+  padding-bottom: 20px;
+}
+
+.MainComponent-frame {
+  margin-bottom: 20px;
+  border-color: #337ab7;
+  border-radius: 7px;
+  background-color: white;
   border: solid 1px;
+}
+
+.MainComponent-frame p {
+  color: #337ab7;
+  font-weight: 700;
 }
 
 .ellipsis {
