--- a/src/component/main/main.scss
+++ b/src/component/main/main.scss
@@ -1,9 +1,39 @@
 .MainComponent{
+    padding-right: 0!important;
+    padding-left: 0!important;
+    
+    &-header{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+        min-height: 70px;
+        background-color: white;
+        &-avatar{
+            text-align: right;
+            img{
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                border: 2px solid #337ab7;
+            }
+        }
+    }
     &-top{
-        border: solid 1px;
+        
     }
     &-bottom{
+        padding-bottom: 20px;
+    }
+    &-frame{
+        margin-bottom: 20px;
+        border-color: #337ab7;
+        border-radius: 7px;
+        background-color: white;
         border: solid 1px;
+        p{
+            color: #337ab7;
+            font-weight: 700;
+        }
     }
 }
 .ellipsis {
