--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,11 @@
 @custom-media --lg-viewport (min-width: 960px); */
 
 :root {/*support by css*/
-  --Grid-gutterSize: 25px;
+  /* --Grid-gutterSize: 25px; */
 }
 body {
   margin: 0;
-  padding: calc(var(--Grid-gutterSize) * 2);
+  padding: 0;
   font-family: sans-serif;
+  background-color: #dff0d8;
 }
