--- a/src/component/login/login.scss
+++ b/src/component/login/login.scss
@@ -50,6 +50,7 @@
             // width:80%!important;
             margin-right: 0!important;
             margin-left: 0!important;
+            margin-bottom: 10px!important;
             i{
                 font-size: 20px;
                 margin-left: 5%;
@@ -57,4 +58,10 @@
             }
         }
     }  
+}
+.erro{
+    margin-left: 15%;
+    color: #ff6200;
+    font-size: 10px;
+    padding-bottom: 5px;
 }
