--- a/src/component/main/main.css
+++ b/src/component/main/main.css
@@ -22,6 +22,28 @@
   border: 2px solid #337ab7;
 }
 
+.MainComponent-header-avatar ul {
+  right: 0 !important;
+  left: unset !important;
+  min-width: unset !important;
+}
+
+.MainComponent-top table tr {
+  font-size: 12px;
+}
+
+@media only screen and (max-width: 445px) {
+  .MainComponent-top table tr {
+    font-size: 9px;
+  }
+}
+
+@media only screen and (max-width: 535px) {
+  .MainComponent-top table tr {
+    font-size: 7px;
+  }
+}
+
 .MainComponent-bottom {
   padding-bottom: 20px;
 }
@@ -37,6 +59,18 @@
 .MainComponent-frame p {
   color: #337ab7;
   font-weight: 700;
+}
+
+.MainComponent .mumberLeave {
+  padding-top: 5px;
+  color: #ff8600;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.MainComponent .erro {
+  color: #ff5600;
+  font-size: 10px;
 }
 
 .ellipsis {
