--- a/src/component/login/login.css
+++ b/src/component/login/login.css
@@ -15,9 +15,13 @@
   color: #fff;
   min-height: 16.4286px;
   padding: 15px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .LoginComponent-body {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   padding-bottom: 30px;
   background-color: white;
 }
