--- a/src/component/main/main.scss
+++ b/src/component/main/main.scss
@@ -3,6 +3,7 @@
     padding-left: 0!important;
     
     &-header{
+        cursor: pointer;
         padding-top: 20px;
         padding-bottom: 20px;
         margin-bottom: 20px;
@@ -28,15 +29,13 @@
             thead{
                 tr{
                     font-size: 12px;
+                    th{
+                        border-bottom: 2px solid #337ab7!important;
+                    }
                 }
                 @media only screen and (max-width: 445px) {
                     tr{
-                        font-size: 9px;
-                    }
-                }
-                @media only screen and (max-width: 535px) {
-                    tr{
-                        font-size: 7px;
+                        font-size: 10px;
                     }
                 }
             }      
@@ -88,5 +87,8 @@
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: center;
+    }
+    @media only screen and (max-width: 330px) {
+        display: none;
     }
 }
